[package]
name = "cryo_cooler_controller"
version = "1.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

plotters = { version = "0.3", default_features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
chrono = { version = "0.4", default-features = false }
plotters-backend = "0.3"
iced = { version = "0.8", features = ["canvas", "tokio", "debug"] }
iced_native = "0.9"
iced_graphics = { version = "0.7", features = ["canvas"] }
plotters-iced = "0.7.0"
cryo_cooler_controller_lib = {path = "../cryo_cooler_controller_lib"}
iced_aw = "0.4.0"
serial2 = "*"
tray-icon = "0.4.2"

[build-dependencies]
image = "0.24.5"

